--- a/demo-project-eureka-server/src/main/resources/application.properties
+++ b/demo-project-eureka-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8761
 spring.application.name=discoveryservice
 eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+eureka.client.fetch-registry=true
 eureka.instance.hostname=localhost
 #in below username:eureka and password is:password .enabling basic auth in eureka server
 #eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
