--- a/demo-project-user-service/src/main/resources/application.properties
+++ b/demo-project-user-service/src/main/resources/application.properties
@@ -1,6 +1,18 @@
-server.port=0
+#server.port=${PORT:0}
 spring.application.name=user-ws
 eureka.instance.hostname=localhost
 eureka.service.clientUrl.defaultZone=http://localhost:8761/eureka
 spring.devtools.restart.enable=true
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance-id:${random.value}}
 #eureka.client.serviceUrl.defaultZone=http://localhost:8761/
+
+
+spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
+spring.datasource.username=hr
+spring.datasource.password=hrdb
+spring.datasource.platform=oracle
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=update
+spring.jackson.serialization.fail-on-empty-beans=false
+server.port=8081
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
